--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    
+    <!-- Font Awesome CSS -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom CSS for the 'One Page Wonder' Template -->
     <link href="css/styles.css" rel="stylesheet">
@@ -48,6 +51,7 @@
                 <div class="col-md-8">
                     <h1>Font Awesome Shortcodes</h1>
                     <h2>For WordPress</h2>
+                    <a class="btn btn-default btn-lg" href="./assets/font-awesome-4.0.0.zip" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Download on GitHub']);"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;Download</a>
                     <div class="credits">
                         <a href="https://github.com/FoolsRun/fontawesome-shortcodes">
                         GitHub Project</a> &nbsp;&nbsp;&middot;&nbsp;&nbsp;
