Update opening paragraphs

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <div class="row">
     <div class="col-md-7">
             <h2>Just The Shortcodes, Please</h2>
-            <p class="lead">Plenty of great WordPress plugins focus on providing both the Font Awesome library, and the shortcodes to use it with, which can be frustrating for theme developers who have already included Font Awesome in their theme.</p>
-            <p class="lead"><strong>Font Awesome Shortcodes for WordPress</strong> assumes you already know how to include Font Awesome in your theme or site and focuses on giving you a great set of shortcodes to use it with.</p>
+            <p class="lead">Plenty of great WordPress plugins focus on providing the Font Awesome library. <strong>Font Awesome Shortcodes for WordPress</strong> assumes you already know how to include Font Awesome in your theme or site and focuses on giving you a great set of shortcodes to use it with.</p>
+            <p class="lead">This plugin creates a simple, out of the way tab in the WordPress TinyMCE editor which serves as an icon-picker and documentation reference. There are no additional TinyMCE buttons to clutter up your screen, just great, easy to use shortcodes!</p>
     </div>
     <div class="col-md-5">
         <img class="screenshot img-responsive" src="images/shortcodes.png">
