--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="col-md-7">
             <h2>Just The Shortcodes, Please</h2>
             <p class="lead">Plenty of great WordPress plugins focus on providing the Font Awesome library. <strong>Font Awesome Shortcodes for WordPress</strong> assumes you already know how to include Font Awesome in your theme or site and focuses on giving you a great set of shortcodes to use it with.</p>
-            <p class="lead">This plugin creates a simple, out of the way tab in the WordPress TinyMCE editor which serves as an icon-picker and documentation reference. There are no additional TinyMCE buttons to clutter up your screen, just great, easy to use shortcodes!</p>
+            <p class="lead">This plugin creates a simple, out of the way button just above the WordPress TinyMCE editor (next to the "Add Media" button) which pops up an icon-picker and documentation reference. There are no additional TinyMCE buttons to clutter up your screen, just great, easy to use shortcodes!</p>
     </div>
     <div class="col-md-5">
         <img class="screenshot img-responsive" src="images/shortcodes.png">
