--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     <!-- Custom CSS for the 'One Page Wonder' Template -->
     <link href="css/styles.css" rel="stylesheet">
+
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-45159573-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>     
+      
   </head>
 
   <body>
@@ -27,12 +40,12 @@
                 <div class="col-md-8">
                     <h1>Font Awesome Shortcodes</h1>
                     <h2>For WordPress</h2>
-                    <a class="btn btn-default btn-lg" href="./assets/fontawesome-shortcodes-4.0.0.zip"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;Download</a>
+                    <a class="btn btn-default btn-lg" href="./assets/fontawesome-shortcodes-4.0.0.zip" onClick="_gaq.push(['_trackEvent', 'Outbound Link', 'Download on GitHub']);"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;Download</a>
                     <div class="credits">
                         <a href="https://github.com/FoolsRun/fontawesome-shortcodes">
                         GitHub Project</a> &nbsp;&nbsp;&middot;&nbsp;&nbsp;
                         Version 4.0.0 &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-                        Created &amp; Maintained by Michael W. Delaney</a>
+                        Created &amp; Maintained by Michael W. Delaney
                     </div>
                     </div>
                     <div class="col-md-4">
@@ -45,7 +58,6 @@
                 </div>
             </div>
         </div>
-      </div>
 
     <div class="container">
 
@@ -110,7 +122,16 @@
   <!-- javascript -->
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-45159573-1', 'foolsrun.github.io');
+  ga('send', 'pageview');
+
+  </script>
   </body>
 
 </html>
