--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
 
     <!-- Custom CSS for the 'One Page Wonder' Template -->
     <link href="css/styles.css" rel="stylesheet">   
+      
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-45159573-1', 'foolsrun.github.io');
+  ga('send', 'pageview');
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-45159573-1']);
+      _gaq.push(['_trackPageview']);
+
+  </script>
+      
   </head>
 
   <body>
@@ -109,16 +124,7 @@
   <!-- javascript -->
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.js"></script>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-45159573-1', 'foolsrun.github.io');
-  ga('send', 'pageview');
-
-  </script>
   </body>
 
 </html>
