Update supported version numbers

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="row">
     <div class="col-md-12">
         <h2>Requirements</h2>
-        <p><strong>Font Awesome Shortcodes for WordPress</strong> is designed to work with <span class="text-success">Font Awesome 4.0</span> and <span class="text-success">WordPress 3.7</span> and requires <span class="text-success">PHP 5.3+</span>.</p>
+        <p><strong>Font Awesome Shortcodes for WordPress</strong> is designed to work with <span class="text-success">Font Awesome 4</span> and <span class="text-success">WordPress 3.7+</span> and requires <span class="text-success">PHP 5.3+</span>.</p>
         
         <div class="well">
             <h2>Installation</h2>
