--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-md-8">
                     <h1>Font Awesome Shortcodes</h1>
                     <h2>For WordPress</h2>
-                    <a class="btn btn-default btn-lg" href="./assets/fontawesome-shortcodes-4.0.3.zip" onClick="_gaq.push(['_trackEvent', 'Outbound Link', 'Download on GitHub']);"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;Download</a>
+                    <a class="btn btn-default btn-lg" href="http://www.wordpress.org/plugins/font-awesome-shortcodes/" onClick="_gaq.push(['_trackEvent', 'Outbound Link', 'Download on GitHub']);"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;Download</a>
                     <div class="credits">
                         <a href="https://github.com/FoolsRun/fontawesome-shortcodes">
                         GitHub Project</a> &nbsp;&nbsp;&middot;&nbsp;&nbsp;
